--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "draft-js": "^0.11.7",
     "firebase": "^9.9.0",
+    "immutable": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-date-picker": "^8.4.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
